<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background"
    tools:context=".view.StartGameActivity">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_16sdp"

            android:layout_marginEnd="@dimen/_8sdp"
            android:background="@drawable/board_background"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/btnNext"
            app:layout_constraintEnd_toStartOf="@id/imageView"
            app:layout_constraintStart_toStartOf="parent"


            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_18sdp"
                android:gravity="center"

                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_8sdp"

                    android:src="@drawable/main_arrow_orange" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:text="@string/let_s_play_the"
                    android:textColor="@color/purpleColor"
                    android:textSize="@dimen/_16ssp"

                    />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginBottom="@dimen/_12sdp"
                android:background="@drawable/button_purple_border"
                android:orientation="horizontal"
                android:padding="@dimen/_12sdp">

                <TextView
                    android:id="@+id/txtModuleName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/emotion_imitation"
                    android:textColor="@color/orangeColor"
                    android:textSize="@dimen/_16ssp"
                    android:textStyle="bold" />

                <!--            <TextView-->
                <!--                android:layout_width="wrap_content"-->
                <!--                android:layout_height="wrap_content"-->
                <!--                android:layout_marginStart="@dimen/_2sdp"-->
                <!--                android:text="@string/game"-->
                <!--                android:textColor="@color/purpleColor"-->
                <!--                android:textSize="@dimen/_16ssp"-->
                <!--                android:textStyle="bold"-->

                <!--                />-->

            </LinearLayout>
        </LinearLayout>


        <Button
            android:id="@+id/btnExit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12ssp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:background="@drawable/exit_button"
            android:gravity="center"
            android:padding="@dimen/_2sdp"
            android:text="@string/exit"
            android:textColor="@color/white"

            android:textSize="@dimen/_8ssp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnPrevious"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_purple"

            android:drawableEnd="@drawable/right_arrow"
            android:padding="@dimen/_6sdp"
            android:paddingEnd="@dimen/_12sdp"
            android:text="@string/previous"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnNext"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnNext"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_orange"

            android:drawableEnd="@drawable/right_arrow"
            android:padding="@dimen/_6sdp"
            android:paddingEnd="@dimen/_12sdp"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnPrevious"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_150sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:src="@drawable/main_kebbi_shape"
            app:layout_constraintEnd_toStartOf="@id/btnExit"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

