<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".view.SignInActivity">

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:src="@drawable/click_health_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etEmailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageLogo"
        android:layout_marginStart="@dimen/_56sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_56sdp"
       >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_email"

            android:padding="@dimen/_8sdp"
            android:paddingStart="@dimen/_12sdp"
            android:textColorHint="@color/black"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>



    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_56sdp"
        android:layout_marginTop="@dimen/_24sdp"
        android:visibility="gone"
        android:layout_marginEnd="@dimen/_56sdp"
        android:background="@drawable/input_sign_background"
        android:hint="Enter Email"
        android:inputType="textEmailAddress"
        android:padding="@dimen/_14sdp"
        android:paddingStart="@dimen/_12sdp"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageLogo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etPasswordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etEmailLayout"
        android:layout_marginStart="@dimen/_56sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_56sdp"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password"
            android:padding="@dimen/_8sdp"
            android:textColorHint="@color/black"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>


    <EditText

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginStart="@dimen/_56sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_56sdp"
        android:background="@drawable/input_sign_background"
        android:hint="Enter Password"
        android:inputType="textPassword"
        android:padding="@dimen/_14sdp"
        android:paddingStart="@dimen/_12sdp"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etEmailLayout" />

    <LinearLayout
        android:id="@+id/rememberMeLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:orientation="horizontal"
        android:paddingStart="@dimen/_12sdp"
        app:layout_goneMarginTop="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="@id/etEmailLayout"
        app:layout_constraintStart_toStartOf="@id/etEmailLayout"
        app:layout_constraintTop_toBottomOf="@id/etPasswordLayout">

        <CheckBox
            android:id="@+id/checkboxRememberMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/main_color"
            android:scaleX="1.6"
            android:scaleY="1.7"
            android:textAlignment="textStart"

            android:textSize="@dimen/_16ssp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:paddingStart="@dimen/_4sdp"
            android:text="@string/remember_me"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"


            />
    </LinearLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSigIn"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_purple"
        android:padding="@dimen/_8sdp"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textColorHint="@color/black"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rememberMeLayout" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:src="@drawable/robot_image"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>