<?xml version="1.0" encoding="utf-8"?>


<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:ignore="HardcodedText">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".view.StartGameActivity">





        <LinearLayout
            android:id="@+id/kebbiLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_12sdp"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@id/vrLayout"
            >

            <ImageView
                android:layout_width="@dimen/_90sdp"
                android:layout_height="@dimen/_90sdp"
                android:background="@drawable/button_purple"
                android:padding="@dimen/_16sdp"
                android:src="@drawable/kibbi_shape" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:text="@string/kibbi"
                android:textColor="@color/purpleColor"
                android:textSize="@dimen/_16ssp"
                android:layout_marginTop="@dimen/_8sdp"
                android:textStyle="bold"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/vrLayout"
            app:layout_constraintTop_toTopOf="@id/kebbiLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_12sdp"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@id/tabletLayout"
            app:layout_constraintBottom_toBottomOf="@id/kebbiLayout"
            app:layout_constraintStart_toEndOf="@id/kebbiLayout"
            >

            <ImageView
                android:layout_width="@dimen/_90sdp"
                android:layout_height="@dimen/_90sdp"
                android:background="@drawable/button_orange"
                android:padding="@dimen/_16sdp"
                android:src="@drawable/vr_shape" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/vr"
                android:textColor="@color/purpleColor"
                android:textSize="@dimen/_16ssp"
                android:layout_marginTop="@dimen/_8sdp"
                android:textStyle="bold"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tabletLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_12sdp"
            android:orientation="vertical"

            app:layout_constraintStart_toEndOf="@id/vrLayout"
            app:layout_constraintTop_toTopOf="@id/vrLayout"
            app:layout_constraintBottom_toBottomOf="@id/vrLayout"

            app:layout_constraintEnd_toEndOf="parent"
            >

            <ImageView
                android:layout_width="@dimen/_90sdp"
                android:layout_height="@dimen/_90sdp"
                android:background="@drawable/button_green"
                android:padding="@dimen/_16sdp"
                android:src="@drawable/tablet_shape" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/tablet"
                android:textColor="@color/purpleColor"
                android:textSize="@dimen/_16ssp"
                android:layout_marginTop="@dimen/_8sdp"
                android:textStyle="bold"
                />
        </LinearLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:headerLayout="@layout/nav_header"
        android:layout_gravity="start"
        app:menu="@menu/navigation_menu" >


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogut"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:text="Log Out"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:textColor="@color/white"
            android:background="@drawable/button_orange"
            />
    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>
